# GE_college

./: .breakpoints  .replit  manage.py  nohup.out  pyproject.toml  requirements.txt  server.sh  test.py
gungun_core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
gungun_core/templates/core/: base.html  login.html  test.html
masters/: models.py  urls.py  views.py
static/: main.min.js
students/: models.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_post.py  0003_auto_20211102_1517.py  0004_remove_user_username.py
